--- a/NIBBS/src/main/res/layout/activity_facecapture.xml
+++ b/NIBBS/src/main/res/layout/activity_facecapture.xml
@@ -96,6 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:gravity="center"
+        android:textColor="@color/green"
         android:text="Captured Image"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,12 +109,21 @@
         android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" >
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageview"
+            />
+
+    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:elevation="10dp"
+        android:id="@+id/captureimage"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -136,6 +146,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="8dp"
+                android:textColor="@color/green"
                 android:text="Re-Capture Image"
                 android:textSize="13dp" />
 
@@ -171,6 +182,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="8dp"
+                android:textColor="@color/green"
                 android:text="BACK"
                 android:textSize="15dp" />
 
@@ -202,6 +214,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="8dp"
+                android:textColor="@color/green"
                 android:text="NEXT"
                 android:textSize="15dp" />
 
