--- a/NIBBS/src/main/res/layout/activity_facecapture.xml
+++ b/NIBBS/src/main/res/layout/activity_facecapture.xml
@@ -105,7 +105,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="300dp"
-        android:layout_height="400dp"
+        android:layout_height="300dp"
         android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,16 +119,14 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/eyecoordinate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
-        android:id="@+id/eyecoordinate"
         android:text="Left Eye:"
         app:layout_constraintBottom_toTopOf="@+id/captureimage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/captureimage"
@@ -137,8 +135,10 @@
         android:elevation="10dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintVertical_bias="0.829">
 
         <LinearLayout
             android:layout_width="match_parent"
