--- a/NIBBS/src/main/res/layout/activity_begincapture.xml
+++ b/NIBBS/src/main/res/layout/activity_begincapture.xml
@@ -43,16 +43,17 @@
                 android:gravity="center"
                 android:padding="8dp"
                 android:text="Data Form"
-                android:textSize="13dp" />
+                android:textSize="13dp"
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="5dp"
-                android:layout_height="0dp" />
+                android:layout_height="1dip" />
 
             <TextView
                 android:layout_width="30dp"
                 android:layout_height="5dp"
-                android:background="@color/purple_200" />
+                android:background="@color/grey" />
 
             <View
                 android:layout_width="5dp"
@@ -61,7 +62,7 @@
             <TextView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:background="@drawable/text_view_circle"
+                android:background="@drawable/text_view_circle_disable"
                 android:gravity="center"
                 android:text="2"
                 android:textColor="#fff"
@@ -82,7 +83,7 @@
             <TextView
                 android:layout_width="30dp"
                 android:layout_height="5dp"
-                android:background="@color/purple_200" />
+                android:background="@color/grey" />
 
             <View
                 android:layout_width="5dp"
@@ -91,7 +92,7 @@
             <TextView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:background="@drawable/text_view_circle"
+                android:background="@drawable/text_view_circle_disable"
                 android:gravity="center"
                 android:text="3"
                 android:textColor="#fff"
@@ -104,7 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:paddingHorizontal="10dp"
-        android:background="@color/green"
+        android:background="@color/dackgreen"
         android:text="Capture Form Data"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -130,8 +131,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="8dp"
-            android:textColor="@color/green"
-            android:text="NEXT"
+            android:textColor="@color/dackgreen"
+            android:text="NEXT >"
             android:textSize="15dp" />
         <View
             android:layout_width="5dp"
