--- a/NIBBS/src/main/res/layout/activity_camera.xml
+++ b/NIBBS/src/main/res/layout/activity_camera.xml
@@ -12,6 +12,7 @@
         android:id="@+id/captureImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Turn Flashlight"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"/>
@@ -21,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:text="Capture"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="25dp"
         android:layout_toLeftOf="@id/captureImage" />
@@ -31,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="10dp"
+        android:text="Switch Camera"
         android:layout_marginLeft="25dp"
         android:layout_toRightOf="@id/captureImage" />
 
