--- a/NIBBS/src/main/res/layout/activity_dataform.xml
+++ b/NIBBS/src/main/res/layout/activity_dataform.xml
@@ -9,7 +9,7 @@
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/green"
+        android:background="@color/dackgreen"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +36,7 @@
         android:padding="10dp"
         android:text="Section 1"
         android:textSize="13dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
 
