--- a/NIBBS/src/main/res/layout/activity_facecapture.xml
+++ b/NIBBS/src/main/res/layout/activity_facecapture.xml
@@ -31,7 +31,7 @@
             <TextView
                 android:layout_width="10dp"
                 android:layout_height="5dp"
-                android:background="@color/purple_200" />
+                android:background="@color/grey" />
 
             <View
                 android:layout_width="5dp"
@@ -52,6 +52,7 @@
                 android:gravity="center"
                 android:padding="8dp"
                 android:text="Face Capture"
+                android:textStyle="bold"
                 android:textSize="13dp" />
 
             <View
@@ -61,7 +62,7 @@
             <TextView
                 android:layout_width="30dp"
                 android:layout_height="5dp"
-                android:background="@color/purple_200" />
+                android:background="@color/grey" />
 
             <View
                 android:layout_width="5dp"
@@ -70,7 +71,7 @@
             <TextView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:background="@drawable/text_view_circle"
+                android:background="@drawable/text_view_circle_disable"
                 android:gravity="center"
                 android:text="3"
                 android:textColor="#fff"
@@ -85,7 +86,7 @@
             <TextView
                 android:layout_width="30dp"
                 android:layout_height="5dp"
-                android:background="@color/purple_200" />
+                android:background="@color/grey" />
 
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
@@ -122,11 +123,13 @@
         android:id="@+id/eyecoordinate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Left Eye:"
+        android:text=""
         app:layout_constraintBottom_toTopOf="@+id/captureimage"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintVertical_bias="0.56" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/captureimage"
