--- a/NIBBS/src/main/res/layout/activity_fingerprint.xml
+++ b/NIBBS/src/main/res/layout/activity_fingerprint.xml
@@ -30,7 +30,7 @@
             <TextView
                 android:layout_width="10dp"
                 android:layout_height="5dp"
-                android:background="@color/purple_200" />
+                android:background="@color/grey" />
 
             <View
                 android:layout_width="5dp"
@@ -43,6 +43,7 @@
                 android:gravity="center"
                 android:text="3"
                 android:textColor="#fff"
+                android:textStyle="bold"
                 android:textSize="13dp" />
 
             <TextView
@@ -60,7 +61,7 @@
             <TextView
                 android:layout_width="30dp"
                 android:layout_height="5dp"
-                android:background="@color/purple_200" />
+                android:background="@color/grey" />
 
             <View
                 android:layout_width="5dp"
@@ -69,7 +70,7 @@
             <TextView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:background="@drawable/text_view_circle"
+                android:background="@drawable/text_view_circle_disable"
                 android:gravity="center"
                 android:text="4"
                 android:textColor="#fff"
@@ -84,7 +85,7 @@
             <TextView
                 android:layout_width="30dp"
                 android:layout_height="5dp"
-                android:background="@color/purple_200" />
+                android:background="@color/grey" />
 
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
