--- a/NIBBS/src/main/res/layout/activity_signature.xml
+++ b/NIBBS/src/main/res/layout/activity_signature.xml
@@ -52,7 +52,7 @@
             <TextView
                 android:layout_width="30dp"
                 android:layout_height="5dp"
-                android:background="@color/purple_200" />
+                android:background="@color/grey" />
 
             <View
                 android:layout_width="5dp"
@@ -61,7 +61,7 @@
             <TextView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:background="@drawable/text_view_circle"
+                android:background="@drawable/text_view_circle_disable"
                 android:gravity="center"
                 android:text="4"
                 android:textColor="#fff"
