--- a/NIBBS/src/main/res/layout/activity_capturefingerprint.xml
+++ b/NIBBS/src/main/res/layout/activity_capturefingerprint.xml
@@ -34,7 +34,7 @@
         android:layout_marginBottom="10dp"
         android:background="@color/lightgrey"
         android:gravity="center"
-        android:text="Illustrate your signature on the screen"
+        android:text="Left Index Finger"
         android:textColor="@color/red" />
 
     <androidx.cardview.widget.CardView
@@ -42,25 +42,16 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginVertical="150dp"
-        android:layout_marginHorizontal="50dp" >
-        <com.github.gcacace.signaturepad.views.SignaturePad
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/signature_pad"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:penColor="@android:color/black"
-            />
-    </androidx.cardview.widget.CardView>
+        android:layout_marginHorizontal="50dp" />
 
     <ImageView
         android:id="@+id/captureImage"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:src="@drawable/capture"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:src="@drawable/capture" />
+        android:layout_marginBottom="10dp"/>
 
 
 </RelativeLayout>
