--- a/NIBBS/src/main/res/layout/activity_beginsignature.xml
+++ b/NIBBS/src/main/res/layout/activity_beginsignature.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BeginfaceActivity">
+    tools:context=".BeginfingerprintActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
@@ -31,27 +31,7 @@
             <ImageView
                 android:layout_width="26dp"
                 android:layout_height="26dp"
-                android:src="@drawable/topbutton"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="8dp"
-                android:textColor="@color/dackgreen"
-                android:text="Face Capture"
-                android:textSize="13dp" />
-
-            <View
-                android:layout_width="15dp"
-                android:layout_height="0dp" />
-
-
-            <ImageView
-                android:layout_width="26dp"
-                android:layout_height="26dp"
                 android:src="@drawable/blacktoparrow"/>
-
 
             <TextView
                 android:layout_width="wrap_content"
@@ -66,10 +46,23 @@
                 android:layout_width="15dp"
                 android:layout_height="0dp" />
 
+
             <ImageView
                 android:layout_width="26dp"
                 android:layout_height="26dp"
-                android:src="@drawable/greytoparrow"/>
+                android:src="@drawable/topbutton"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="8dp"
+                android:textColor="@color/green"
+                android:text="Signature Capture"
+                android:textSize="13dp" />
+
+
 
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
@@ -93,7 +86,7 @@
         <ImageView
             android:layout_width="84dp"
             android:layout_height="84dp"
-            android:src="@drawable/faceavater" />
+            android:src="@drawable/signature" />
 
         <View
             android:layout_width="30dp"
@@ -102,22 +95,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Face Capture"
-                android:layout_marginBottom="8dp"
+                android:padding="8dp"
+                android:text="Signature Capture"
                 android:textColor="@color/black"
                 android:textSize="18dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Read out the instruction on the screen to the individual. LOOK INTO THE CAMERA. Click on green button."
+                android:padding="8dp"
+                android:text="Use your finger to illustrate
+                 your signature on the screen."
                 android:textColor="@color/black"
                 android:textSize="10dp" />
 
@@ -131,7 +125,7 @@
         android:layout_height="56dp"
         android:background="@drawable/button"
         android:paddingHorizontal="10dp"
-        android:text="Start Face Capture"
+        android:text="Start Signature Capture"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="15dp"
