--- a/NIBBS/src/main/res/layout/activity_camera.xml
+++ b/NIBBS/src/main/res/layout/activity_camera.xml
@@ -7,17 +7,46 @@
         android:id="@+id/surfaceView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_centerInParent="true"-->
-<!--        android:text="Camera Demo application\nDeveloped by Ravi Sharma"-->
-<!--        android:textColor="@android:color/black" />-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp">
+        <ImageView
+            android:id="@+id/backbutton"
+            android:layout_width="37dp"
+            android:layout_height="37dp"
+            android:src="@drawable/closebutton"
+            />
+        <TextView
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Selfie"
+            android:textColor="@color/white"/>
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/circlequestion"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/cameratext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/captureImage"
+        android:layout_marginBottom="10dp"
+        android:background="@color/lightgrey"
+        android:gravity="center"
+        android:text=""
+        android:textColor="@color/red" />
 
     <ImageView
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="80dp"
         android:layout_marginHorizontal="50dp"
         android:src="@drawable/selfiearea" />
 
@@ -30,21 +59,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"/>
 
-<!--    <Button-->
-<!--        android:id="@+id/captureImage"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginBottom="10dp"/>-->
-
-<!--    <Button-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_marginBottom="10dp"-->
-<!--        android:layout_marginRight="25dp"-->
-<!--        android:layout_toLeftOf="@id/captureImage" />-->
 
     <ImageView
         android:id="@+id/flash"
@@ -65,14 +79,5 @@
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="25dp"
         android:layout_toRightOf="@id/captureImage"/>
-
-<!--    <Button-->
-<!--        android:id="@+id/flipCamera"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_marginBottom="10dp"-->
-<!--        android:layout_marginLeft="25dp"-->
-<!--        android:layout_toRightOf="@id/captureImage" />-->
 
 </RelativeLayout>
