--- a/NIBBS/src/main/res/layout/activity_datacapture.xml
+++ b/NIBBS/src/main/res/layout/activity_datacapture.xml
@@ -131,6 +131,7 @@
 
                 <EditText
                     android:id="@+id/dateofbirthEditText"
+                    android:inputType="textEmailAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </com.google.android.material.textfield.TextInputLayout>
@@ -146,6 +147,7 @@
 
                 <EditText
                     android:id="@+id/genderEditText"
+                    android:inputType="phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -161,6 +163,7 @@
 
                 <EditText
                     android:id="@+id/maritalstatusEditText"
+                    android:inputType="phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </com.google.android.material.textfield.TextInputLayout>
