--- a/NIBBS/src/main/res/layout/activity_lastdatacapture.xml
+++ b/NIBBS/src/main/res/layout/activity_lastdatacapture.xml
@@ -87,6 +87,7 @@
 
                 <EditText
                     android:id="@+id/surnameEditText"
+                    android:inputType="phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </com.google.android.material.textfield.TextInputLayout>
