--- a/NIBBS/src/main/res/layout/activity_signature.xml
+++ b/NIBBS/src/main/res/layout/activity_signature.xml
@@ -10,8 +10,8 @@
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
+        android:background="@color/white"
+        android:elevation="0dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,124 +28,106 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-               <TextView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:background="@drawable/text_view_circle"
-                android:gravity="center"
-                android:text="3"
-                android:textColor="#fff"
-                android:textSize="13dp" />
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/topbutton"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="8dp"
+                android:textColor="@color/dackgreen"
+                android:text="Face Capture"
+                android:textSize="13dp" />
+
+            <View
+                android:layout_width="15dp"
+                android:layout_height="0dp" />
+
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/blacktoparrow"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="8dp"
+                android:textColor="@color/black"
                 android:text="Fingerprint Capture"
                 android:textSize="13dp" />
 
             <View
-                android:layout_width="5dp"
+                android:layout_width="15dp"
                 android:layout_height="0dp" />
 
-            <TextView
-                android:layout_width="30dp"
-                android:layout_height="5dp"
-                android:background="@color/purple_200" />
-
-            <View
-                android:layout_width="5dp"
-                android:layout_height="0dp" />
-
-            <TextView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:background="@drawable/text_view_circle"
-                android:gravity="center"
-                android:text="4"
-                android:textColor="#fff"
-                android:textSize="13dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="8dp"
-                android:text="Signature Capture"
-                android:textSize="13dp" />
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/greytoparrow"/>
 
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="335dp"
+        android:layout_height="90dp"
         android:layout_margin="10dp"
         android:gravity="center"
-        android:textColor="@color/green"
+        android:background="@drawable/greencurvelayout"
         android:text="Captured Signature"
+        android:textColor="@color/white"
         android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="300dp"
-        android:layout_height="400dp"
+        android:layout_height="300dp"
         android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" >
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
+
         <ImageView
             android:id="@+id/signaturepreview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="300dp"
-        android:id="@+id/signature"
-        android:layout_height="50dp"
-        android:elevation="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+    <Button
+        android:id="@+id/captureimage"
+        android:layout_width="213dp"
+        android:layout_height="56dp"
+        android:background="@drawable/redbuttonlayout"
+        android:text="Re-Capture Signature"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="8dp"
-                android:textColor="@color/green"
-                android:text="Re-Capture Signature"
-                android:textSize="13dp" />
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:paddingBottom="5dp"
+        android:background="@color/dackgreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -166,7 +148,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="8dp"
-                android:textColor="@color/green"
+                android:textColor="@color/white"
                 android:text="BACK"
                 android:textSize="15dp" />
 
@@ -177,6 +159,14 @@
 
         </LinearLayout>
 
+        <View
+            android:layout_width="5dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+        <View
+            android:layout_width="1dp"
+            android:layout_height="20dp"
+            android:background="@color/white"/>
         <View
             android:layout_width="5dp"
             android:layout_height="0dp"
@@ -198,8 +188,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="8dp"
-                android:textColor="@color/dackgreen"
-                android:text="COMPLETE"
+                android:textColor="@color/white"
+                android:text="NEXT"
                 android:textSize="15dp" />
 
             <View
