--- a/NIBBS/src/main/res/layout/activity_capturefingerprint.xml
+++ b/NIBBS/src/main/res/layout/activity_capturefingerprint.xml
@@ -42,7 +42,13 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginVertical="150dp"
-        android:layout_marginHorizontal="50dp" />
+        android:layout_marginHorizontal="50dp" >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/fingerprintpreview"
+            />
+    </androidx.cardview.widget.CardView>
 
     <ImageView
         android:id="@+id/captureImage"
