--- a/NIBBS/src/main/res/layout/activity_fingerprint.xml
+++ b/NIBBS/src/main/res/layout/activity_fingerprint.xml
@@ -101,7 +101,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="70dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -113,6 +113,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="15dp"
+                            android:gravity="center"
                             android:text="Left Finger"
                             android:textColor="@color/white"
                             android:background="@color/dackgreen"
@@ -121,11 +122,11 @@
                 </androidx.cardview.widget.CardView>
 
                 <View
-                    android:layout_width="20dp"
+                    android:layout_width="10dp"
                     android:layout_height="0dp" />
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="70dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -137,6 +138,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="15dp"
+                            android:gravity="center"
                             android:text="Left Finger"
                             android:textColor="@color/white"
                             android:background="@color/dackgreen"
@@ -160,7 +162,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="70dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -172,18 +174,20 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="15dp"
+                            android:gravity="center"
                             android:text="Left Finger"
+                            android:textSize="15dp"
                             android:textColor="@color/white"
                             android:background="@color/dackgreen"
                             />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
                 <View
-                    android:layout_width="20dp"
+                    android:layout_width="10dp"
                     android:layout_height="0dp" />
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="70dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -196,6 +200,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="15dp"
                             android:text="Left Finger"
+                            android:gravity="center"
                             android:textColor="@color/white"
                             android:background="@color/dackgreen"
                             />
@@ -229,7 +234,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="70dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -241,6 +246,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="15dp"
+                            android:gravity="center"
                             android:text="Right Finger"
                             android:textColor="@color/white"
                             android:background="@color/dackgreen"
@@ -248,11 +254,11 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
                 <View
-                    android:layout_width="20dp"
+                    android:layout_width="10dp"
                     android:layout_height="0dp" />
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="70dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -264,6 +270,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="15dp"
+                            android:gravity="center"
                             android:text="Right Finger"
                             android:textColor="@color/white"
                             android:background="@color/dackgreen"
@@ -287,7 +294,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="70dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -299,6 +306,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="15dp"
+                            android:gravity="center"
                             android:text="Right Finger"
                             android:textColor="@color/white"
                             android:background="@color/dackgreen"
@@ -306,11 +314,11 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
                 <View
-                    android:layout_width="20dp"
+                    android:layout_width="10dp"
                     android:layout_height="0dp" />
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="70dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -322,6 +330,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="15dp"
+                            android:gravity="center"
                             android:text="Right Finger"
                             android:textColor="@color/white"
                             android:background="@color/dackgreen"
