--- a/NIBBS/src/main/res/layout/activity_signingpage.xml
+++ b/NIBBS/src/main/res/layout/activity_signingpage.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Fingerprint Capture"
+            android:text="Signature Capture"
             android:textColor="@color/white"/>
         <ImageView
             android:layout_width="24dp"
@@ -37,21 +37,18 @@
         android:text="Illustrate your signature on the screen"
         android:textColor="@color/red" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_marginVertical="150dp"
-        android:layout_marginHorizontal="50dp" >
+
         <com.github.gcacace.signaturepad.views.SignaturePad
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/signature_pad"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:background="@color/white"
+            android:layout_marginVertical="150dp"
+            android:layout_marginHorizontal="50dp"
             app:penColor="@android:color/black"
             />
-    </androidx.cardview.widget.CardView>
 
     <ImageView
         android:id="@+id/captureImage"
